# my-firmware-canvas

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
challenges/001-hello-strings/: Dockerfile  README.md
challenges/001-hello-strings/src/: greetings.c  greetings.h
challenges/001-hello-strings/tests/: run_tests.sh  test_greetings.c
challenges/001-helloworld/src/: helloworld.c
challenges/001-helloworld/tests/: test_helloworld.sh
challenges/001-sample-challenge/tests/: .gitkeep
challenges/004-linker-scripts/: Dockerfile  Makefile  README.md  linker.ld
challenges/004-linker-scripts/src/: main.c
challenges/004-linker-scripts/tests/: run_tests.sh  test_linker.sh
challenges/005-stm32f769idisco-baremetal-led_blink/: CMakeLists.txt  Dockerfile  readme.md
challenges/005-stm32f769idisco-baremetal-led_blink/linker/: stm32f769.ld
challenges/005-stm32f769idisco-baremetal-led_blink/src/: main.c  startup.s
challenges/005-stm32f769idisco-baremetal-led_blink/tests/: run_tests.sh
templates/: challenge-README-template.md
tools/: arm-none-eabi.cmake  run_all_tests.sh
